--- a/.github/workflows/auto-build-on-base-image-change.yml
+++ b/.github/workflows/auto-build-on-base-image-change.yml
@@ -1,43 +1,25 @@
-name: Auto Image Rebuild
+name: Auto build docker image 
 on:
   schedule:
-    - cron: "0 3 * * 1"
+    - cron: "0 3 * * 5"
   workflow_dispatch:
 
 jobs:
   build-latest:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Regular Docker Image
-        uses: docker/build-push-action@v2.6.1
+      - name: Build and push
+        uses: docker/build-push-action@v5
         with:
           context: "${{ github.workspace }}"
           push: true
-          tags: technoguyfication/caddy-cloudflare:latest
-
-  build-alpine:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Alpine Docker Image
-        uses: docker/build-push-action@v2.6.1
-        with:
-          context: "${{ github.workspace }}"
-          push: true
-          tags: technoguyfication/caddy-cloudflare:alpine
-          file: "Dockerfile.alpine"
+          tags: maooyer/caddy-cloudflare:latest
